[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-buck2-plugin"
version = "0.1.0"
description = "Hatch build hook for Buck2 integration"
authors = [{name = "Pynomaly Team", email = "team@pynomaly.io"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "hatchling",
]

[project.entry-points.hatch_build_hook]
buck2 = "hatch_buck2_plugin:Buck2BuildHook"

[tool.hatch.build.targets.wheel]
packages = ["hatch_buck2_plugin"]